samples/_failures_safe/1761693632_59a29a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_816eb55b.c: In function ‘main’:
./samples/SAFE/__tmp_816eb55b.c:152:72: error: expected ‘)’ at end of input
  152 |     if (london < 0 || paris < 0 || berlin < 0 || rome < 0 || madrid < 0
      |        ~                                                               ^
      |                                                                        )
./samples/SAFE/__tmp_816eb55b.c:152:5: error: expected declaration or statement at end of input
  152 |     if (london < 0 || paris < 0 || berlin < 0 || rome < 0 || madrid < 0
      |     ^~
